ipc/ipdl/test/ipdl/error/dtorReserved.ipdl
protocol dtorReserved {

    // it's an error to use dtor syntax for non-dtor messages

child:
    ~SomeMsg();

};
